# serializer version: 1
# name: test_model[normal-help]
  '''
  usage: MyModel [-h] [OPTIONS] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────────╮
  │ -h, --help      show this help message and exit        │
  │ --preset {None,default,large,small,plain}              │
  │                 (default: None)                        │
  │ --aa INT        (default: 5)                           │
  │ --width 1.0 <= FLOAT <= 100.0                          │
  │                 (default: 10.0)                        │
  │ --height 1 <= INT <= 50                                │
  │                 (default: 5)                           │
  │ --enabled, --no-enabled                                │
  │                 enable the thing (default: False)      │
  │ --text STR      (default: nope)                        │
  │ --thing {first,second,third}                           │
  │                 (default: first)                       │
  │ --count INT     (default: 1)                           │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub options ──────────────────────────────────────────╮
  │ --sub.a FLOAT   (required)                             │
  │ --sub.b FLOAT   (default: 5.0)                         │
  │ --sub.c 0 <= FLOAT <= 2000.0                           │
  │                 C! (default: 25.0)                     │
  │ --sub.do-the-thing, --sub.no-do-the-thing              │
  │                 (default: False)                       │
  │ --sub.do-another-thing, --sub.no-do-another-thing      │
  │                 Another thing? (default: False)        │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub.subsub options ───────────────────────────────────╮
  │ --sub.subsub.x 0 <= INT <= 10                          │
  │                 (default: 5)                           │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub2 options ─────────────────────────────────────────╮
  │ --sub2.a FLOAT  (default: 1)                           │
  │ --sub2.b FLOAT  (default: 2)                           │
  │ --sub2.c 0 <= FLOAT <= 2000.0                          │
  │                 C! (default: 3)                        │
  │ --sub2.do-the-thing, --sub2.no-do-the-thing            │
  │                 (default: False)                       │
  │ --sub2.do-another-thing, --sub2.no-do-another-thing    │
  │                 Another thing? (default: False)        │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub2.subsub options ──────────────────────────────────╮
  │ --sub2.subsub.x 0 <= INT <= 10                         │
  │                 (default: 5)                           │
  ╰────────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────────╮
  │ (default: run)                                         │
  │   • run         Run the model.                         │
  │   • export      Export geometry to a STEP or STL file. │
  │   • view        View model geometry.                   │
  │   • viewer      Viewer control                         │
  ╰────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_model[normal-render]
  '25.4x2,en=False,thing=third,text=nope'
# ---
# name: test_model[run-help]
  '''
  usage: MyModel [-h] [OPTIONS] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────────╮
  │ -h, --help      show this help message and exit        │
  │ --preset {None,default,large,small,plain}              │
  │                 (default: None)                        │
  │ --aa INT        (default: 5)                           │
  │ --width 1.0 <= FLOAT <= 100.0                          │
  │                 (default: 10.0)                        │
  │ --height 1 <= INT <= 50                                │
  │                 (default: 5)                           │
  │ --enabled, --no-enabled                                │
  │                 enable the thing (default: False)      │
  │ --text STR      (default: nope)                        │
  │ --thing {first,second,third}                           │
  │                 (default: first)                       │
  │ --count INT     (default: 1)                           │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub options ──────────────────────────────────────────╮
  │ --sub.a FLOAT   (required)                             │
  │ --sub.b FLOAT   (default: 5.0)                         │
  │ --sub.c 0 <= FLOAT <= 2000.0                           │
  │                 C! (default: 25.0)                     │
  │ --sub.do-the-thing, --sub.no-do-the-thing              │
  │                 Zhu Li, do the thing! (default: False) │
  │ --sub.do-another-thing, --sub.no-do-another-thing      │
  │                 Another thing? (default: False)        │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub.subsub options ───────────────────────────────────╮
  │ --sub.subsub.x 0 <= INT <= 10                          │
  │                 (default: 5)                           │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub2 options ─────────────────────────────────────────╮
  │ --sub2.a FLOAT  (default: 1)                           │
  │ --sub2.b FLOAT  (default: 2)                           │
  │ --sub2.c 0 <= FLOAT <= 2000.0                          │
  │                 C! (default: 3)                        │
  │ --sub2.do-the-thing, --sub2.no-do-the-thing            │
  │                 Zhu Li, do the thing! (default: False) │
  │ --sub2.do-another-thing, --sub2.no-do-another-thing    │
  │                 Another thing? (default: False)        │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub2.subsub options ──────────────────────────────────╮
  │ --sub2.subsub.x 0 <= INT <= 10                         │
  │                 (default: 5)                           │
  ╰────────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────────╮
  │ (default: run)                                         │
  │   • run         Run the model.                         │
  │   • export      Export geometry to a STEP or STL file. │
  │   • view        View model geometry.                   │
  │   • viewer      Viewer control                         │
  ╰────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_model[run-render]
  '25.4x2,en=False,thing=third,text=nope'
# ---
# name: test_model_blank[normal-help]
  '''
  usage: MyModel [-h] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────╮
  │ -h, --help  show this help message and exit        │
  ╰────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────╮
  │ (default: run)                                     │
  │   • run     Run the model.                         │
  │   • export  Export geometry to a STEP or STL file. │
  │   • view    View model geometry.                   │
  │   • viewer  Viewer control                         │
  ╰────────────────────────────────────────────────────╯
  '''
# ---
# name: test_model_blank[normal-render]
  'hm'
# ---
# name: test_model_blank[run-help]
  '''
  usage: MyModel [-h] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────╮
  │ -h, --help  show this help message and exit        │
  ╰────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────╮
  │ (default: run)                                     │
  │   • run     Run the model.                         │
  │   • export  Export geometry to a STEP or STL file. │
  │   • view    View model geometry.                   │
  │   • viewer  Viewer control                         │
  ╰────────────────────────────────────────────────────╯
  '''
# ---
# name: test_model_blank[run-render]
  'hm'
# ---
# name: test_model_multiple[normal-class-help]
  'Multiple Model subclasses defined: FirstModel, SecondModel. Call .run() explicitly.'
# ---
# name: test_model_multiple[normal-class-render]
  'Multiple Model subclasses defined: FirstModel, SecondModel. Call .run() explicitly.'
# ---
# name: test_model_multiple[normal-file-help]
  'Multiple Model subclasses defined: FirstModel, SecondModel. Call .run() explicitly.'
# ---
# name: test_model_multiple[normal-file-render]
  'Multiple Model subclasses defined: FirstModel, SecondModel. Call .run() explicitly.'
# ---
# name: test_model_multiple[run-class-help]
  '''
  usage: FirstModel [-h] [--width 1.0 <= FLOAT <= 100.0] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────╮
  │ -h, --help  show this help message and exit        │
  │ --width 1.0 <= FLOAT <= 100.0                      │
  │             (default: 10.0)                        │
  ╰────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────╮
  │ (default: run)                                     │
  │   • run     Run the model.                         │
  │   • export  Export geometry to a STEP or STL file. │
  │   • view    View model geometry.                   │
  │   • viewer  Viewer control                         │
  ╰────────────────────────────────────────────────────╯
  '''
# ---
# name: test_model_multiple[run-class-render]
  'FirstModel 10.0'
# ---
# name: test_model_multiple[run-file-help]
  '''
  usage: FirstModel [-h] [--width 1.0 <= FLOAT <= 100.0] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────╮
  │ -h, --help  show this help message and exit        │
  │ --width 1.0 <= FLOAT <= 100.0                      │
  │             (default: 10.0)                        │
  ╰────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────╮
  │ (default: run)                                     │
  │   • run     Run the model.                         │
  │   • export  Export geometry to a STEP or STL file. │
  │   • view    View model geometry.                   │
  │   • viewer  Viewer control                         │
  ╰────────────────────────────────────────────────────╯
  '''
# ---
# name: test_model_multiple[run-file-render]
  'FirstModel 10.0'
# ---
# name: test_model_multiple_harness[normal-class_multi_first-help]
  '''
  usage: bdbox [-h] [--width 1.0 <= FLOAT <= 100.0] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────╮
  │ -h, --help  show this help message and exit        │
  │ --width 1.0 <= FLOAT <= 100.0                      │
  │             (default: 10.0)                        │
  ╰────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────╮
  │ (default: run)                                     │
  │   • run     Run the model.                         │
  │   • export  Export geometry to a STEP or STL file. │
  │   • view    View model geometry.                   │
  │   • viewer  Viewer control                         │
  ╰────────────────────────────────────────────────────╯
  '''
# ---
# name: test_model_multiple_harness[normal-class_multi_first-render]
  'FirstModel 10.0'
# ---
# name: test_model_multiple_harness[normal-class_multi_second-help]
  '''
  usage: bdbox [-h] [--height 1 <= INT <= 100] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --height 1 <= INT <= 100  (default: 10)                          │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_model_multiple_harness[normal-class_multi_second-render]
  'SecondModel 10'
# ---
# name: test_model_multiple_harness[run-class_multi_first-help]
  '''
  usage: bdbox [-h] [--width 1.0 <= FLOAT <= 100.0] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────╮
  │ -h, --help  show this help message and exit        │
  │ --width 1.0 <= FLOAT <= 100.0                      │
  │             (default: 10.0)                        │
  ╰────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────╮
  │ (default: run)                                     │
  │   • run     Run the model.                         │
  │   • export  Export geometry to a STEP or STL file. │
  │   • view    View model geometry.                   │
  │   • viewer  Viewer control                         │
  ╰────────────────────────────────────────────────────╯
  '''
# ---
# name: test_model_multiple_harness[run-class_multi_first-render]
  'FirstModel 10.0'
# ---
# name: test_model_multiple_harness[run-class_multi_second-help]
  '''
  usage: bdbox [-h] [--height 1 <= INT <= 100] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --height 1 <= INT <= 100  (default: 10)                          │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_model_multiple_harness[run-class_multi_second-render]
  'FirstModel 10.0'
# ---
# name: test_model_subclass[normal-help]
  'Multiple Model subclasses defined: ChildModel, ParentModel. Call .run() explicitly.'
# ---
# name: test_model_subclass[normal-render]
  'Multiple Model subclasses defined: ChildModel, ParentModel. Call .run() explicitly.'
# ---
# name: test_model_subclass[run-help]
  '''
  usage: ChildModel [-h] [--width 1.0 <= FLOAT <= 100.0] [--height 1 <= INT <= 100] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────╮
  │ -h, --help  show this help message and exit        │
  │ --width 1.0 <= FLOAT <= 100.0                      │
  │             (default: 10.0)                        │
  │ --height 1 <= INT <= 100                           │
  │             (default: 10)                          │
  ╰────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────╮
  │ (default: run)                                     │
  │   • run     Run the model.                         │
  │   • export  Export geometry to a STEP or STL file. │
  │   • view    View model geometry.                   │
  │   • viewer  Viewer control                         │
  ╰────────────────────────────────────────────────────╯
  '''
# ---
# name: test_model_subclass[run-render]
  'ChildModel 25.4 10'
# ---
# name: test_module_class_model[mod_model-help]
  '''
  usage: bdbox [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_class_model[mod_model-render]
  '''
  b1 Box(x=2.5, y=3, z=5)
  b2 Box(x=3, y=5, z=5.0)
  '''
# ---
# name: test_module_class_model[mod_params-help]
  '''
  usage: bdbox [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_class_model[mod_params-render]
  '''
  b1 Box(x=2.5, y=3, z=5)
  b2 Box(x=3, y=5, z=5.0)
  '''
# ---
# name: test_module_class_model[mono_model-help]
  '''
  usage: bdbox [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_class_model[mono_model-render]
  '''
  b1 <SnapshotMock name='b123d.Box()'>
  b2 <SnapshotMock name='b123d.Box()'>
  '''
# ---
# name: test_module_class_model[mono_params-help]
  '''
  usage: bdbox [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_class_model[mono_params-render]
  '''
  b1 <SnapshotMock name='b123d.Box()'>
  b2 <SnapshotMock name='b123d.Box()'>
  '''
# ---
# name: test_module_models[tests.models.mod_model-help-embedded]
  '''
  Model main
  usage: SomeModel [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_models[tests.models.mod_model-help-harness]
  '''
  Model main
  usage: bdbox [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_models[tests.models.mod_model-render-embedded]
  '''
  Model main
  b1 Box(x=2.5, y=3, z=5)
  b2 Box(x=3, y=5, z=5.0)
  '''
# ---
# name: test_module_models[tests.models.mod_model-render-harness]
  '''
  Model main
  Model main
  b1 Box(x=2.5, y=3, z=5)
  b2 Box(x=3, y=5, z=5.0)
  '''
# ---
# name: test_module_models[tests.models.mod_model.model-help-embedded]
  '''
  usage: SomeModel [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_models[tests.models.mod_model.model-help-harness]
  '''
  usage: bdbox [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_models[tests.models.mod_model.model-render-embedded]
  '''
  b1 Box(x=2.5, y=3, z=5)
  b2 Box(x=3, y=5, z=5.0)
  '''
# ---
# name: test_module_models[tests.models.mod_model.model-render-harness]
  '''
  b1 Box(x=2.5, y=3, z=5)
  b2 Box(x=3, y=5, z=5.0)
  '''
# ---
# name: test_module_models[tests.models.mod_params-help-embedded]
  '''
  b1 Box(x=2.5, y=3, z=5)
  b2 Box(x=3, y=5, z=5.0)
  Model main P(Params)(a=2.5, b=3, c=5, d=5.0)
  '''
# ---
# name: test_module_models[tests.models.mod_params-help-harness]
  '''
  usage: bdbox [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_models[tests.models.mod_params-render-embedded]
  '''
  b1 Box(x=2.5, y=3, z=5)
  b2 Box(x=3, y=5, z=5.0)
  Model main P(Params)(a=2.5, b=3, c=5, d=5.0)
  '''
# ---
# name: test_module_models[tests.models.mod_params-render-harness]
  '''
  b1 Box(x=2.5, y=3, z=5)
  b2 Box(x=3, y=5, z=5.0)
  Model main P(Params)(a=2.5, b=3, c=5, d=5.0)
  '''
# ---
# name: test_module_models[tests.models.mod_params.model-help-embedded]
  '''
  usage: model.py [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_models[tests.models.mod_params.model-help-harness]
  '''
  usage: bdbox [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_models[tests.models.mod_params.model-render-embedded]
  '''
  b1 Box(x=2.5, y=3, z=5)
  b2 Box(x=3, y=5, z=5.0)
  '''
# ---
# name: test_module_models[tests.models.mod_params.model-render-harness]
  '''
  b1 Box(x=2.5, y=3, z=5)
  b2 Box(x=3, y=5, z=5.0)
  '''
# ---
# name: test_module_models[tests.models.mono_model.models.model-help-embedded]
  '''
  usage: MyModel [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_models[tests.models.mono_model.models.model-help-harness]
  '''
  usage: bdbox [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_models[tests.models.mono_model.models.model-render-embedded]
  '''
  b1 <SnapshotMock name='b123d.Box()'>
  b2 <SnapshotMock name='b123d.Box()'>
  '''
# ---
# name: test_module_models[tests.models.mono_model.models.model-render-harness]
  '''
  b1 <SnapshotMock name='b123d.Box()'>
  b2 <SnapshotMock name='b123d.Box()'>
  '''
# ---
# name: test_module_models[tests.models.mono_params.models.model-help-embedded]
  '''
  usage: model.py [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_models[tests.models.mono_params.models.model-help-harness]
  '''
  usage: bdbox [-h] [--a FLOAT] [--b INT] [--c 1 <= INT <= 10] [--d 1.0 <= FLOAT <= 10.0] [{run,export,view,viewer}]
  
  ╭─ options ────────────────────────────────────────────────────────╮
  │ -h, --help                show this help message and exit        │
  │ --a FLOAT                 (default: 2.5)                         │
  │ --b INT                   (default: 3)                           │
  │ --c 1 <= INT <= 10        (default: 5)                           │
  │ --d 1.0 <= FLOAT <= 10.0  (default: 5.0)                         │
  ╰──────────────────────────────────────────────────────────────────╯
  ╭─ subcommands ────────────────────────────────────────────────────╮
  │ (default: run)                                                   │
  │   • run                   Run the model.                         │
  │   • export                Export geometry to a STEP or STL file. │
  │   • view                  View model geometry.                   │
  │   • viewer                Viewer control                         │
  ╰──────────────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_models[tests.models.mono_params.models.model-render-embedded]
  '''
  b1 <SnapshotMock name='b123d.Box()'>
  b2 <SnapshotMock name='b123d.Box()'>
  '''
# ---
# name: test_module_models[tests.models.mono_params.models.model-render-harness]
  '''
  b1 <SnapshotMock name='b123d.Box()'>
  b2 <SnapshotMock name='b123d.Box()'>
  '''
# ---
# name: test_module_models[tests.models.mono_plain.models.model-help-embedded]
  'Box count: 2'
# ---
# name: test_module_models[tests.models.mono_plain.models.model-help-harness]
  '''
  Box count: 2
  usage: bdbox [-h] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────╮
  │ -h, --help  show this help message and exit        │
  ╰────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────╮
  │ (default: run)                                     │
  │   • run     Run the model.                         │
  │   • export  Export geometry to a STEP or STL file. │
  │   • view    View model geometry.                   │
  │   • viewer  Viewer control                         │
  ╰────────────────────────────────────────────────────╯
  '''
# ---
# name: test_module_models[tests.models.mono_plain.models.model-render-embedded]
  'Box count: 2'
# ---
# name: test_module_models[tests.models.mono_plain.models.model-render-harness]
  '''
  Box count: 2
  Box count: 2
  '''
# ---
# name: test_params_class[noparams-help]
  'params() not called'
# ---
# name: test_params_class[noparams-render]
  'params() not called'
# ---
# name: test_params_class[normal-help]
  '''
  usage: params_class.py [-h] [OPTIONS] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────────╮
  │ -h, --help      show this help message and exit        │
  │ --preset {None,default,large,small}                    │
  │                 (default: None)                        │
  │ --aa INT        (default: 5)                           │
  │ --width 1.0 <= FLOAT <= 100.0                          │
  │                 (default: 10.0)                        │
  │ --height 1 <= INT <= 50                                │
  │                 (default: 5)                           │
  │ --enabled, --no-enabled                                │
  │                 enable the thing (default: False)      │
  │ --text STR      (default: nope)                        │
  │ --thing {first,second,third}                           │
  │                 (default: first)                       │
  │ --count INT     (default: 1)                           │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub options ──────────────────────────────────────────╮
  │ --sub.a FLOAT   (required)                             │
  │ --sub.b FLOAT   (default: 5.0)                         │
  │ --sub.c 0 <= FLOAT <= 2000.0                           │
  │                 C! (default: 25.0)                     │
  │ --sub.do-the-thing, --sub.no-do-the-thing              │
  │                 Zhu Li, do the thing! (default: False) │
  │ --sub.do-another-thing, --sub.no-do-another-thing      │
  │                 Another thing? (default: False)        │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub.subsub options ───────────────────────────────────╮
  │ --sub.subsub.x 0 <= INT <= 10                          │
  │                 (default: 5)                           │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub2 options ─────────────────────────────────────────╮
  │ --sub2.a FLOAT  (default: 1)                           │
  │ --sub2.b FLOAT  (default: 2)                           │
  │ --sub2.c 0 <= FLOAT <= 2000.0                          │
  │                 C! (default: 3)                        │
  │ --sub2.do-the-thing, --sub2.no-do-the-thing            │
  │                 Zhu Li, do the thing! (default: False) │
  │ --sub2.do-another-thing, --sub2.no-do-another-thing    │
  │                 Another thing? (default: False)        │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub2.subsub options ──────────────────────────────────╮
  │ --sub2.subsub.x 0 <= INT <= 10                         │
  │                 (default: 5)                           │
  ╰────────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────────╮
  │ (default: run)                                         │
  │   • run         Run the model.                         │
  │   • export      Export geometry to a STEP or STL file. │
  │   • view        View model geometry.                   │
  │   • viewer      Viewer control                         │
  ╰────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_params_class[normal-render]
  '25.4x2,en=False,thing=third,text=nope'
# ---
# name: test_params_class[show-help]
  '''
  usage: params_class.py [-h] [OPTIONS] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────────╮
  │ -h, --help      show this help message and exit        │
  │ --preset {None,default,large,small}                    │
  │                 (default: None)                        │
  │ --aa INT        (default: 5)                           │
  │ --width 1.0 <= FLOAT <= 100.0                          │
  │                 (default: 10.0)                        │
  │ --height 1 <= INT <= 50                                │
  │                 (default: 5)                           │
  │ --enabled, --no-enabled                                │
  │                 enable the thing (default: False)      │
  │ --text STR      (default: nope)                        │
  │ --thing {first,second,third}                           │
  │                 (default: first)                       │
  │ --count INT     (default: 1)                           │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub options ──────────────────────────────────────────╮
  │ --sub.a FLOAT   (required)                             │
  │ --sub.b FLOAT   (default: 5.0)                         │
  │ --sub.c 0 <= FLOAT <= 2000.0                           │
  │                 C! (default: 25.0)                     │
  │ --sub.do-the-thing, --sub.no-do-the-thing              │
  │                 Zhu Li, do the thing! (default: False) │
  │ --sub.do-another-thing, --sub.no-do-another-thing      │
  │                 Another thing? (default: False)        │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub.subsub options ───────────────────────────────────╮
  │ --sub.subsub.x 0 <= INT <= 10                          │
  │                 (default: 5)                           │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub2 options ─────────────────────────────────────────╮
  │ --sub2.a FLOAT  (default: 1)                           │
  │ --sub2.b FLOAT  (default: 2)                           │
  │ --sub2.c 0 <= FLOAT <= 2000.0                          │
  │                 C! (default: 3)                        │
  │ --sub2.do-the-thing, --sub2.no-do-the-thing            │
  │                 Zhu Li, do the thing! (default: False) │
  │ --sub2.do-another-thing, --sub2.no-do-another-thing    │
  │                 Another thing? (default: False)        │
  ╰────────────────────────────────────────────────────────╯
  ╭─ sub2.subsub options ──────────────────────────────────╮
  │ --sub2.subsub.x 0 <= INT <= 10                         │
  │                 (default: 5)                           │
  ╰────────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────────╮
  │ (default: run)                                         │
  │   • run         Run the model.                         │
  │   • export      Export geometry to a STEP or STL file. │
  │   • view        View model geometry.                   │
  │   • viewer      Viewer control                         │
  ╰────────────────────────────────────────────────────────╯
  '''
# ---
# name: test_params_class[show-render]
  '25.4x2,en=False,thing=third,text=nope'
# ---
# name: test_params_class_blank[noparams-help]
  '''
  usage: params_class_blank.py [-h] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────╮
  │ -h, --help  show this help message and exit        │
  ╰────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────╮
  │ (default: run)                                     │
  │   • run     Run the model.                         │
  │   • export  Export geometry to a STEP or STL file. │
  │   • view    View model geometry.                   │
  │   • viewer  Viewer control                         │
  ╰────────────────────────────────────────────────────╯
  '''
# ---
# name: test_params_class_blank[noparams-render]
  'Blank model!'
# ---
# name: test_params_class_blank[normal-help]
  '''
  usage: params_class_blank.py [-h] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────╮
  │ -h, --help  show this help message and exit        │
  ╰────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────╮
  │ (default: run)                                     │
  │   • run     Run the model.                         │
  │   • export  Export geometry to a STEP or STL file. │
  │   • view    View model geometry.                   │
  │   • viewer  Viewer control                         │
  ╰────────────────────────────────────────────────────╯
  '''
# ---
# name: test_params_class_blank[normal-render]
  'Blank model!'
# ---
# name: test_params_class_blank[show-help]
  '''
  usage: params_class_blank.py [-h] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────╮
  │ -h, --help  show this help message and exit        │
  ╰────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────╮
  │ (default: run)                                     │
  │   • run     Run the model.                         │
  │   • export  Export geometry to a STEP or STL file. │
  │   • view    View model geometry.                   │
  │   • viewer  Viewer control                         │
  ╰────────────────────────────────────────────────────╯
  '''
# ---
# name: test_params_class_blank[show-render]
  'Blank model!'
# ---
# name: test_params_class_instance[help]
  '''
  usage: params_class_instance.py [-h] [OPTIONS] [{run,export,view,viewer}]
  
  ╭─ options ──────────────────────────────────────────╮
  │ -h, --help  show this help message and exit        │
  │ --preset {None,default,large,small}                │
  │             (default: None)                        │
  │ --width 1.0 <= FLOAT <= 100.0                      │
  │             (default: 10.0)                        │
  │ --height 1 <= INT <= 50                            │
  │             (default: 5)                           │
  │ --enabled, --no-enabled                            │
  │             enable the thing (default: False)      │
  │ --text STR  (default: nope)                        │
  │ --thing {first,second,third}                       │
  │             (default: first)                       │
  ╰────────────────────────────────────────────────────╯
  ╭─ subcommands ──────────────────────────────────────╮
  │ (default: run)                                     │
  │   • run     Run the model.                         │
  │   • export  Export geometry to a STEP or STL file. │
  │   • view    View model geometry.                   │
  │   • viewer  Viewer control                         │
  ╰────────────────────────────────────────────────────╯
  '''
# ---
# name: test_params_class_instance[render]
  '50.0x5,en=False,thing=first,text=nope'
# ---
